--- a/register.html
+++ b/register.html
@@ -351,7 +351,7 @@
     <header>
         <div class="header-container">
             <div class="logo-container" id="logoContainer">
-                <img src="https://via.placeholder.com/50" alt="BitHorizon Logo" class="logo">
+                <img src="logo.png" alt="BitHorizon Logo" class="logo">
                 <span class="company-name">BitHorizon.io</span>
             </div>
         </div>
