--- a/index.html
+++ b/index.html
@@ -21,50 +21,42 @@
             --white: #ffffff;
             --footer-text: #ccc;
         }
-
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-
         body {
             background-color: var(--white);
             color: var(--text-color);
             line-height: 1.6;
         }
-
         .container {
             width: 90%;
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
         }
-
         /* Header Styles */
         header {
             background-color: var(--primary-color);
             padding: 20px 0;
             border-bottom: 2px solid var(--accent-color);
         }
-
         .header-container {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
-
         .logo {
             display: flex;
             align-items: center;
         }
-
         .logo img {
             height: 50px;
             margin-right: 15px;
         }
-
         .logo a {
             color: var(--white);
             text-decoration: none;
@@ -73,35 +65,28 @@
             display: flex;
             align-items: center;
         }
-
         .logo a:hover {
             color: var(--accent-color);
         }
-
         nav {
             role: "navigation";
         }
-
         nav ul {
             display: flex;
             list-style: none;
         }
-
         nav ul li {
             margin-left: 25px;
         }
-
         nav ul li a {
             color: var(--white);
             text-decoration: none;
             font-weight: 500;
             transition: color 0.3s;
         }
-
         nav ul li a:hover {
             color: var(--accent-color);
         }
-
         /* Hero Section */
         .hero {
             background-color: var(--white);
@@ -111,24 +96,20 @@
             text-align: center;
             border-bottom: 2px solid var(--accent-color);
         }
-
         .hero-content {
             max-width: 800px;
             margin: 0 auto;
         }
-
         .hero h1 {
             font-size: 3.5rem;
             margin-bottom: 20px;
             color: var(--primary-color);
         }
-
         .hero p {
             font-size: 1.5rem;
             margin-bottom: 30px;
             color: var(--light-text);
         }
-
         .btn {
             display: inline-block;
             background-color: var(--primary-color);
@@ -142,73 +123,61 @@
             border: none;
             cursor: pointer;
         }
-
         .btn:hover {
             background-color: var(--accent-color);
             transform: translateY(-3px);
         }
-
         /* Trading View Widget Section */
         .trading-section {
             padding: 40px 0;
             background-color: var(--white);
             border-bottom: 2px solid var(--accent-color);
         }
-
         .trading-section .container {
             max-width: 100%;
             padding: 0;
         }
-
         .tradingview-widget-container {
             height: 60vh;
             max-height: 600px;
             width: 100%;
         }
-
         .tradingview-widget-copyright {
             text-align: center;
             padding: 10px 0;
             font-size: 0.8rem;
             color: var(--light-text);
         }
-
         .tradingview-widget-copyright a {
             color: var(--accent-color);
             text-decoration: none;
         }
-
         /* Market Overview Section */
         .market-overview {
             padding: 80px 0;
             background-color: var(--background-light);
         }
-
         .section-title {
             text-align: center;
             margin-bottom: 50px;
         }
-
         .section-title h2 {
             font-size: 2.5rem;
             margin-bottom: 15px;
             color: var(--accent-color);
         }
-
         .section-title p {
             font-size: 1.2rem;
             color: var(--light-text);
             max-width: 700px;
             margin: 0 auto;
         }
-
         .features {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 30px;
             margin-top: 50px;
         }
-
         .feature-card {
             background-color: var(--white);
             padding: 30px;
@@ -217,43 +186,36 @@
             box-shadow: 0 4px 6px rgba(0, 102, 204, 0.1);
             transition: transform 0.3s, box-shadow 0.3s;
         }
-
         .feature-card:hover {
             transform: translateY(-10px);
             box-shadow: 0 10px 20px rgba(0, 102, 204, 0.2);
         }
-
         .feature-card h3 {
             font-size: 1.5rem;
             margin-bottom: 15px;
             color: var(--accent-color);
         }
-
         .feature-card p {
             color: var(--light-text);
         }
-
         /* Footer */
         footer {
             background-color: var(--primary-color);
             padding: 70px 0 20px;
             border-top: 2px solid var(--accent-color);
         }
-
         .footer-content {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 40px;
             margin-bottom: 50px;
         }
-
         .footer-column h3 {
             font-size: 1.5rem;
             margin-bottom: 25px;
             color: var(--white);
             position: relative;
         }
-
         .footer-column h3:after {
             content: '';
             position: absolute;
@@ -263,40 +225,32 @@
             height: 2px;
             background-color: var(--white);
         }
-
         .footer-column p {
             margin-bottom: 20px;
             color: var(--footer-text);
         }
-
         .footer-column ul {
             list-style: none;
         }
-
         .footer-column ul li {
             margin-bottom: 12px;
         }
-
         .footer-column ul li a {
             color: var(--white);
             text-decoration: none;
             transition: color 0.3s;
         }
-
         .footer-column ul li a:hover {
             color: var(--accent-color);
         }
-
         .contact-info {
             list-style: none;
         }
-
         .contact-info li {
             margin-bottom: 15px;
             display: flex;
             align-items: flex-start;
         }
-
         .contact-info li i {
             color: var(--white);
             margin-right: 10px;
@@ -304,12 +258,10 @@
             font-size: 1.2rem;
             width: 20px;
         }
-
         .contact-info li a,
         .contact-info li span {
             color: var(--white);
         }
-
         .footer-bottom {
             text-align: center;
             padding-top: 20px;
@@ -317,46 +269,37 @@
             color: var(--white);
             font-size: 0.9rem;
         }
-
         /* Responsive */
         @media (max-width: 768px) {
             .header-container {
                 flex-direction: column;
                 text-align: center;
             }
-
             nav ul {
                 margin-top: 20px;
                 flex-wrap: wrap;
                 justify-content: center;
             }
-
             nav ul li {
                 margin: 5px 15px;
             }
-
             .hero {
                 min-height: 50vh;
             }
-
             .hero h1 {
                 font-size: 2.5rem;
             }
-
             .hero p {
                 font-size: 1.2rem;
             }
-
             .tradingview-widget-container {
                 height: 40vh;
                 max-height: 400px;
             }
-
             .features {
                 grid-template-columns: 1fr;
             }
         }
-
         @media (max-width: 480px) {
             .footer-content {
                 grid-template-columns: 1fr;
@@ -369,14 +312,14 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <a href="/">
-                    <img src="https://i.imgur.com/9k0WQYt.png" alt="BitHorizon Forex Trading Logo">
-                    <span>BitHorizon.io</span>
+                <a href="index.html">
+                    <img src="logo.png" alt="">
+                    <span>BitHorizon</span>
                 </a>
             </div>
             <nav role="navigation">
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="/about">About Us</a></li>
                     <li><a href="/platform">Trading Platform</a></li>
                     <li><a href="/education">Education</a></li>
@@ -385,18 +328,16 @@
             </nav>
         </div>
     </header>
-
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
             <div class="hero-content">
                 <h1>Master the Forex Market</h1>
                 <p>Trade global currencies with advanced tools, real-time data, and expert insights</p>
-                <a href="/signup" class="btn">Get Started Today</a>
+                <a href="index.html" class="btn">Get Started Today</a>
             </div>
         </div>
     </section>
-
     <!-- Trading View Widget Section -->
     <section class="trading-section">
         <div class="container">
@@ -435,7 +376,6 @@
             </div>
         </div>
     </section>
-
     <!-- Market Overview Section -->
     <section class="market-overview">
         <div class="container">
@@ -443,7 +383,6 @@
                 <h2>Global Forex Market</h2>
                 <p>The foreign exchange market is the largest and most liquid financial market in the world, with trillions of dollars traded daily.</p>
             </div>
-
             <div class="features">
                 <div class="feature-card">
                     <h3>24/5 Market Access</h3>
@@ -472,32 +411,29 @@
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
                     <div class="logo">
-                        <a href="/">
-                            <img src="https://i.imgur.com/9k0WQYt.png" alt="BitHorizon Forex Trading Logo">
-                            <span>BitHorizon.io</span>
+                        <a href="index.html">
+                            <img src="logo.png" alt="BitHorizon">
+                            <span>BitHorizon</span>
                         </a>
                     </div>
                     <p>Your trusted partner in forex trading. We provide the tools and resources you need to succeed in the global currency markets.</p>
                 </div>
-
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="/">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/platform">Trading Platform</a></li>
                         <li><a href="/education">Education</a></li>
                         <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
-
                 <div class="footer-column">
                     <h3>Legal</h3>
                     <ul>
@@ -507,7 +443,6 @@
                         <li><a href="/aml">AML Policy</a></li>
                     </ul>
                 </div>
-
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     <ul class="contact-info">
@@ -526,13 +461,11 @@
                     </ul>
                 </div>
             </div>
-
             <div class="footer-bottom">
                 <p>&copy; <span id="current-year"></span> BitHorizon.io. All rights reserved.</p>
             </div>
         </div>
     </footer>
-
     <script>
         // Dynamically update the copyright year
         document.getElementById('current-year').textContent = new Date().getFullYear();
