--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
             <nav role="navigation">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="/about">About Us</a></li>
-                    <li><a href="/platform">Trading Platform</a></li>
-                    <li><a href="/education">Education</a></li>
-                    <li><a href="/login">Login</a></li>
+                    <li><a href="about">About Us</a></li>
+                    <li><a href="platform">Trading Platform</a></li>
+                    <li><a href="education">Education</a></li>
+                    <li><a href="register">Login</a></li>
                 </ul>
             </nav>
         </div>
