--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <a href="index.html">
+                <a href="index">
                     <img src="logo.png" alt="">
                     <span>BitHorizon</span>
                 </a>
             </div>
             <nav role="navigation">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index">Home</a></li>
                     <li><a href="about">About Us</a></li>
                     <li><a href="platform">Trading Platform</a></li>
                     <li><a href="education">Education</a></li>
@@ -334,7 +334,7 @@
             <div class="hero-content">
                 <h1>Master the Forex Market</h1>
                 <p>Trade global currencies with advanced tools, real-time data, and expert insights</p>
-                <a href="index.html" class="btn">Get Started Today</a>
+                <a href="index" class="btn">Get Started Today</a>
             </div>
         </div>
     </section>
@@ -417,7 +417,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <div class="logo">
-                        <a href="index.html">
+                        <a href="index">
                             <img src="logo.png" alt="BitHorizon">
                             <span>BitHorizon</span>
                         </a>
@@ -427,11 +427,11 @@
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="/about">About Us</a></li>
-                        <li><a href="/platform">Trading Platform</a></li>
-                        <li><a href="/education">Education</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="index">Home</a></li>
+                        <li><a href="about">About Us</a></li>
+                        <li><a href="platform">Trading Platform</a></li>
+                        <li><a href="education">Education</a></li>
+                        <li><a href="contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
