--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <li><a href="about">About Us</a></li>
                     <li><a href="platform">Trading Platform</a></li>
                     <li><a href="education">Education</a></li>
-                    <li><a href="register">Login</a></li>
+                    <li><a href="login">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -334,7 +334,7 @@
             <div class="hero-content">
                 <h1>Master the Forex Market</h1>
                 <p>Trade global currencies with advanced tools, real-time data, and expert insights</p>
-                <a href="index" class="btn">Get Started Today</a>
+                <a href="login" class="btn">Get Started Today</a>
             </div>
         </div>
     </section>
