--- a/about.html
+++ b/about.html
@@ -562,9 +562,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About Us</a></li>
-                    <li><a href="/platform">Trading Platform</a></li>
-                    <li><a href="/education">Education</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="platform">Trading Platform</a></li>
+                    <li><a href="education">Education</a></li>
+                    <li><a href="login">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -787,9 +787,9 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="/platform">Trading Platform</a></li>
-                        <li><a href="/education">Education</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="platform">Trading Platform</a></li>
+                        <li><a href="education">Education</a></li>
+                        <li><a href="contact">Contact</a></li>
                     </ul>
                 </div>
                 
