--- a/platform.html
+++ b/platform.html
@@ -562,8 +562,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="platform.html" class="active">Trading Platform</a></li>
-                    <li><a href="/education">Education</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="education">Education</a></li>
+                    <li><a href="login">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -808,8 +808,8 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="platform.html">Trading Platform</a></li>
-                        <li><a href="/education">Education</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="education">Education</a></li>
+                        <li><a href="contact">Contact</a></li>
                     </ul>
                 </div>
                 
