--- a/education.html
+++ b/education.html
@@ -662,7 +662,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="platform.html">Trading Platform</a></li>
                     <li><a href="education.html" class="active">Education</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="login">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -920,7 +920,7 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="platform.html">Trading Platform</a></li>
                         <li><a href="education.html">Education</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="contact">Contact</a></li>
                     </ul>
                 </div>
                 
